# Tabula-Rasa-Adaptive-AI

./: .env  .env.local  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  9HOUR_TEST_SUMMARY.md  =1.3.0  ANALYSIS_REPORT.md  ARCHITECT_GUARDRAILS.md  AUTONOMOUS_SYSTEM_IMPLEMENTATION.md  CLAUDE.md  CLEANUP_SUMMARY.md  CLEAN_TEST_SUITE_STATUS.md  CODE_QUALITY_REPORT.md  CODING_STANDARDS.md  COHESIVE_SYSTEM_IMPLEMENTATION.md  COMPLETE_META_COGNITIVE_GUIDE.md  COMPREHENSIVE_TEST_SUITE.md  CONSOLIDATION_SUMMARY.md  CONTINUOUS_LEARNING_DATA_REORGANIZATION.md  DATABASE_ARCHITECTURE_SUMMARY.md  DATA_USAGE_ANALYSIS.md  ENHANCED_GOVERNOR_ARCHITECT_PLAN.md  ERROR_ANALYSIS_AND_FIXES.md  FEATURE_INTEGRATION_ANALYSIS.md  FINAL_AGI_PUZZLE_SUMMARY.md  FINAL_TEST_STATUS_REPORT.md  FRAME_ANALYSIS_INTEGRATION_SUMMARY.md  GAMEPLAY_AUTOMATION_SUMMARY.md  GAME_INTEGRATION_STATUS.md  GUI_FIX_SUMMARY.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  META_COGNITIVE_COMPLETION_SUMMARY.md  META_COGNITIVE_IMPLEMENTATION_COMPLETE.md  MIGRATION.md  MODULARIZATION_COMPLETE.md  MODULARIZATION_SUMMARY.md  (+257 more)
.claude/: settings.json
.github/: copilot-instructions.md
.serena/: project.yml
ARC-AGI-3-Agents/: arc_api_action_documentation.md  main.py
agi_puzzles/: README.md  puzzle1_hidden_cause.py  puzzle2_object_permanence.py  puzzle3_cooperation_deception.py  puzzle4_tool_use.py  puzzle4_tool_use_fixed.py  puzzle5_deferred_gratification.py  puzzle_base.py
architect_evolution_data/: architectural_insights.json  evolution_history.json  evolution_strategies.json
configs/: base_config.yaml  phase0_config.yaml  phase1_config.yaml  training_config.yaml
continuous_learning_data/: action_intelligence_as66-821a4dcad9c2.json  action_intelligence_ft09-f340c8e5138e.json  action_intelligence_lp85-2e205bbe3622.json  action_intelligence_ls20-fa137e247ce6.json  action_intelligence_sp80-5f3511b239b8.json  action_intelligence_vc33-58ec4396715d.json  combined_score_0_actions_0_1756611071.json  combined_score_0_actions_0_1757020079.json  global_counters.json  meta_learning_continuous_1756989247.json  meta_learning_maximum_intelligence_1756999835.json  meta_learning_maximum_intelligence_1757000088.json  meta_learning_maximum_intelligence_1757001187.json  meta_learning_maximum_intelligence_1757001441.json  meta_learning_session_1757030954.json  meta_learning_session_1757031151.json  meta_learning_session_1757032486.json  meta_learning_session_1757033867.json  meta_learning_session_1757059027.json  meta_learning_session_1757059344.json  meta_learning_session_1757059652.json  meta_learning_session_1757062174.json  meta_learning_session_1757062182.json  meta_learning_session_1757062489.json  meta_learning_session_1757062497.json  meta_learning_session_1757062506.json  meta_learning_session_1757062552.json  meta_learning_session_1757062566.json  meta_learning_session_1757062579.json  meta_learning_session_1757062937.json  meta_learning_session_1757062944.json  meta_learning_session_1757062945.json  meta_learning_session_1757063343.json  meta_learning_session_1757063358.json  meta_learning_session_1757063367.json  meta_learning_session_1757064229.json  meta_learning_session_1757064284.json  meta_learning_session_1757064389.json  meta_learning_session_1757064424.json  meta_learning_session_1757091680.json  (+208 more)
data/: action_intelligence_as66-821a4dcad9c2.json  action_intelligence_ft09-b8377d4b7815.json  action_intelligence_ft09-f340c8e5138e.json  action_intelligence_lp85-2e205bbe3622.json  action_intelligence_lp85-d265526edbaa.json  action_intelligence_ls20-fa137e247ce6.json  action_intelligence_sp80-0605ab9e5b2a.json  action_intelligence_sp80-5f3511b239b8.json  action_intelligence_vc33-58ec4396715d.json  action_intelligence_vc33-6ae7bf49eea5.json  action_traces.ndjson  combined_score_0_actions_0_1757099920.json  global_counters.json  inventory_batch_1757265792.json  inventory_batch_1757268061.json  inventory_batch_1757268062.json  inventory_batch_1757268063.json  inventory_batch_1757268064.json  inventory_candidates_1757268069.json  inventory_full_1757268069.json  learned_patterns.backup.pkl  learned_patterns.pkl  learned_patterns.pkl.tmp_11148_1  learned_patterns.pkl.tmp_11416_1  meta_learning_session_1757199969.json  meta_learning_session_1757209980.json  meta_learning_session_1757209997.json  meta_learning_session_1757210106.json  meta_learning_session_1757210182.json  meta_learning_session_1757210197.json  meta_learning_session_1757210302.json  meta_learning_session_1757210390.json  meta_learning_session_1757210588.json  meta_learning_session_1757210769.json  meta_learning_session_1757210982.json  meta_learning_session_1757211088.json  meta_learning_session_1757211283.json  meta_learning_session_1757211377.json  meta_learning_session_1757211592.json  meta_learning_session_1757212782.json  (+318 more)
docs/: ARC_INTEGRATION.md  COMPLETE_META_COGNITIVE_GUIDE.md  META_COGNITIVE_COMPLETION_SUMMARY.md  README.md  SIMULATION_DRIVEN_INTELLIGENCE.md  STARTUP_GUIDE.md  TRAINING_CONSOLIDATION_PLAN.md  adding_advanced_intelligence.md  arc_api_actions_rules.md  dependency_analysis.py  how_arc_api_works.md  log_rotation.md  meta_cognitive_memory_solutions.md  nonetype_error_analysis.md  rate_limiting.md  research_methodology.py  research_report.md  symbiosis-architect-governor.md
examples/: salience_mode_comparison.py  salience_modes_demo.py  salience_system_demo.py
experiments/: phase0_lp_validation.py  phase0_memory_test.py  phase0_survival_test.py
fix/: diagnose_api_connection.py  fix_arc3_agents_module.py  fix_arc3_imports.py  fix_final_encoding.py  fix_import_issues.py  fix_langsmith_import.py  fix_nonetype_errors.py  fix_tabula_rasa_path.py  safe_arc_training.py  setup_arc3_integration.py
integration_tests/: verify_real_arc_integration.py
rules/: tabula-rasa-operating-rules.md
scripts/: analyze_last_game.py  cleanup_duplicate_action_traces.py  code-quality.sh  db_smoke_test.py  db_table_counts.py  db_table_peek.py  fix-formatting.sh  fix_action_count_sync.py  fix_session_data.py  format_code.py  query_db_counts.py  (+13 more)
(+1218 files in other folders)
