[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabula-rasa"
version = "0.1.0"
description = "Advanced ARC-AGI-3 Agent with Coordinate-Aware Learning System"
authors = [{name = "Isaiah N", email = "isaiah@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "opencv-python>=4.8.0",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "gymnasium>=1.0.0",
    "matplotlib>=3.5.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project.scripts]
train-arc-agent = "main_training:main"
train-arc-enhanced = "master_arc_trainer:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
